--- a/ckanext/cioos_theme/templates/header_wp.html
+++ b/ckanext/cioos_theme/templates/header_wp.html
@@ -6,7 +6,7 @@
   textarea {
     color: #3d3d3d;
     word-wrap: break-word;
-    font: 14px/1.8 Raleway, Helvetica, Arial
+    font: 14px/1.8 "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 
   body {
