--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -30,8 +30,8 @@
           (_('Relevance'), 'score desc, metadata_modified desc'),
           (_('Name Ascending'), 'title_' + lang + ' asc'),
           (_('Name Descending'), 'title_' + lang + ' desc'),
-          (_('Start Date'), 'temporal-extent-begin asc'),
-          (_('End Date'), 'temporal-extent-end desc'),
+          (_('Oldest First'), 'temporal-extent-begin asc'),
+          (_('Newest First'), 'temporal-extent-end desc'),
           (_('Last Modified'), 'metadata_modified desc'),
           (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
         %}
