--- a/ckanext/cioos_theme/templates/pacific_header.html
+++ b/ckanext/cioos_theme/templates/pacific_header.html
@@ -309,7 +309,7 @@
             </ul>
           </li>
           <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>DATA TOOLS</span></a></li>
-          <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="/ckan/"><span>DATA CATALOGUE</span></a>
+          <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>DATA CATALOGUE</span></a>
             <ul class="sub-menu" style=" min-width: 161px;">
               <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Datasets</a></li>
               <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organizations</a></li>
