change applied data menu item name

--- a/ckanext/cioos_theme/templates/header_wp.html
+++ b/ckanext/cioos_theme/templates/header_wp.html
@@ -300,7 +300,7 @@
               <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}about/partners/">Partners</a></li>
             </ul>
           </li>
-          <li id="menu-item-1673" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}data-applications/"><span>CIOOS APPLIED</span></a>
+          <li id="menu-item-1673" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}data-applications/"><span>APPLIED DATA</span></a>
             <ul class="sub-menu" style=" min-width: 144px;">
               <li id="menu-item-1743" class="menu-item "><a href="{{ g.site_home_url }}data-applications/baynes-sound/">Baynes Sound Ecosystem Monitoring</a></li>
               <li id="menu-item-1940" class="menu-item "><a href="{{ g.site_home_url }}under-construction/">Marine Heatwaves</a></li>
