add class back to main header, change cioos applied to applied data

--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -37,7 +37,7 @@
           <li><a href="{{ g.site_home_url }}">{{ _('HOME') }}</a></li>
           {{ h.build_nav_main( ('search', _('DATASETS')), ('organizations_index', _('ORGANIZATIONS')) ) }}
           <li><a href="{{ g.site_home_url }}about/ ">{{ _('ABOUT') }}</a></li>
-          <li><a href="{{ g.site_home_url }}data-applications/ ">{{ _('CIOOS APPLIED') }}</a></li>
+          <li><a href="{{ g.site_home_url }}data-applications/ ">{{ _('APPLIED DATA') }}</a></li>
           <li><a href="{{ g.site_home_url }}data-tools">{{ _('DATA TOOLS') }}</a></li>
           {{ h.build_nav_main( ('home.index', _('DATA CATALOGUE')) ) }}
           <ul class="shareicons">
@@ -111,7 +111,7 @@
         <li><a href="{{ g.site_home_url }}">{{ _('HOME') }}</a></li>
         {{ h.build_nav_main( ('search', _('DATASETS')), ('organizations_index', _('ORGANIZATIONS')) ) }}
         <li><a href="{{ g.site_home_url }}about/ ">{{ _('ABOUT') }}</a></li>
-        <li><a href="{{ g.site_home_url }}data-applications/ ">{{ _('CIOOS APPLIED') }}</a></li>
+        <li><a href="{{ g.site_home_url }}data-applications/ ">{{ _('APPLIED DATA') }}</a></li>
         <li><a href="{{ g.site_home_url }}data-tools">{{ _('DATA TOOLS') }}</a></li>
         {{ h.build_nav_main( ('home.index', _('DATA CATALOGUE')) ) }} {% endblock %}
       </ul>
