--- a/ckanext/cioos_theme/templates/pacific_header.html
+++ b/ckanext/cioos_theme/templates/pacific_header.html
@@ -285,7 +285,7 @@
     line-height: 45px;
 }
 </style>
-<div id="header">
+<div id="header" class="nav main-nav">
   <div id="header-core">
     <div id="logo">
       <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}" alt="Logo"></a> </div>
