remove background color from none homepage .box and .wrapper

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -246,7 +246,7 @@ body {
 
 .box,
 .wrapper {
-  background-color: #F8F8F8;
+  //background-color: #F8F8F8;
   border-radius: 0;
   box-shadow: none;
   position: relative;
