--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1072,7 +1072,7 @@ div.search-input-group {
     #header- sticky .menu>li.current-menu-item>a,
     #header-sticky .menu>li.current-menu-ancestor>a,
     #header-sticky .menu>li>a:hover {
-      color: #0a0a0a !important;
+      color: #ffc857 !important;
       background: #FFF !important
     }
 
@@ -1080,16 +1080,10 @@ div.search-input-group {
       text-decoration: none !important;
     }
 
-    #header .header-links li a {
-      display: block;
-      padding: 8px 14px;
-      margin: 0
-    }
-
-    #header .header-links>ul>li a {
+    #header .header-links>ul>li{
       font-size: 13px;
       color: #bebebe;
-      padding: 50px 15px 15px 15px
+      padding: 50px 25px 15px 25px
     }
 
     #header .menu>li>a {
@@ -1101,8 +1095,24 @@ div.search-input-group {
       font-weight: 700
     }
 
-    #header .menu>li>a span {
-      padding: 10px
+    #header .menu>li.menu-item-has-children>a span:after {
+      content: '\f107';
+      font-family: fontawesome;
+      font-weight: normal;
+      display: inline-block;
+      margin: -2px 0 0 6px;
+      vertical-align: top;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      transform: rotate(0);
+      color: inherit;
+      position: relative;
+      background: transparent;
+      height: 16px;
+      width: auto;
+      right: auto;
+      line-height: inherit;
+      font-size: 18px;
     }
 
     #header .menu>li.menu-hover>a span,
@@ -1134,7 +1144,8 @@ div.search-input-group {
       z-index: 9999;
       background: #FFF;
       border: 1px solid #E1E1E1;
-      border-top: none
+      border-top: none;
+      margin-top: 5px;
     }
 
     #header .header-links .subshow {
@@ -1179,13 +1190,7 @@ div.search-input-group {
       text-decoration: none !important
     }
 
-    #header .header-links li a {
-      display: block;
-      padding: 8px 14px;
-      margin: 0
-    }
-
-    #header .menu>li>a span::after {
+    #header .menu>li>a::after {
       content: '';
       display: block;
       width: 0;
@@ -1194,8 +1199,8 @@ div.search-input-group {
       transition: width .5s
     }
 
-    #header .menu>li>a span:hover::after,
-    #header .menu>li.current_page_item>a span::after {
+    #header .menu>li>a:hover::after,
+    #header .menu>li.current_page_item>a::after {
        width: 100%
      }
 
@@ -1211,23 +1216,5 @@ div.search-input-group {
       vertical-align: middle;
       height: 45px;
       line-height: 45px;
-    }
-    #header .menu>li>a span.mega-indicator:after {
-      content: '\f107';
-      font-family: fontawesome;
-      font-weight: normal;
-      display: inline-block;
-      margin: 0 0 0 6px;
-      vertical-align: top;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      transform: rotate(0);
-      color: inherit;
-      position: relative;
-      background: transparent;
-      height: auto;
-      width: auto;
-      right: auto;
-      line-height: inherit;
     }
   }
