--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -202,7 +202,7 @@ body {
   color: #fff;
 }
 #topmenu img {
-  vertical-align: middle;
+  vertical-align: bottom;
   border: none;
   height: auto;
 
