Remove Resouces caret. Updated Partners menu item.

--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -7,7 +7,7 @@
         <ul class="sub-menu">
           <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">About CIOOS Atlantic</a></li>
           <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Meet Our Team</a></li>
-          <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Partners</a></li>
+          <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Our Partners</a></li>
           <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Essential Ocean Variables</a></li>
           <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Data Management</a></li>
         </ul>
@@ -19,7 +19,7 @@
           <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organizations</a></li>
         </ul>
       </li>
-      <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span>RESOURCES</span></a>
+      <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span>RESOURCES</span></a>
       </li>
       <ul class="shareicons">
         <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
