--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -2,16 +2,30 @@
   {% block header_mobilesite_navigation2 %}
   <nav>
     <ul id="menu-mobile-menu" class="menu">
+      {%- if h.lang() == 'en' -%}
       <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>HOME</span></a></li>
       <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span>ABOUT</span></a>
+      {%- else -%}
+      <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>Accueil</span></a></li>
+      <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span>À Propos</span></a>
+      {%- endif -%}
         <ul class="sub-menu">
+          {%- if h.lang() == 'en' -%}
           <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">About CIOOS Atlantic</a></li>
           <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Meet Our Team</a></li>
           <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Our Partners</a></li>
           <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Essential Ocean Variables</a></li>
           <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Data Management</a></li>
+          {%- else -%}
+          <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">À Propos de CIOOS Atlantique</a></li>
+          <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Rencontrez Notre Équipe</a></li>
+          <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Nos Partenaires</a></li>
+          <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Variables de Base</a></li>
+          <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Gestion de Données</a></li>
+          {%- endif -%}
         </ul>
       </li>
+      {%- if h.lang() == 'en' -%}
       <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>DATA TOOLS</span></a></li>
       <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>DATA CATALOGUE</span></a>
         <ul class="sub-menu">
@@ -21,6 +35,17 @@
       </li>
       <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span>RESOURCES</span></a>
       </li>
+      {%- else -%}
+      <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>Outils de Données</span></a></li>
+      <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Catalogue de Données</span></a>
+        <ul class="sub-menu">
+          <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
+          <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
+        </ul>
+      </li>
+      <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span>Ressources</span></a>
+      </li>
+      {%- endif -%}
       <ul class="shareicons">
         <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
         <li>
@@ -40,16 +65,30 @@
 {% macro include_site_header() %}
   {% block header_main %}
   <ul id="menu-main-menu-en" class="menu">
+    {%- if h.lang() == 'en' -%}
     <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>HOME</span></a></li>
     <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span class="mega-indicator">ABOUT</span></a>
+    {%- else -%}
+    <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>Accueil</span></a></li>
+    <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span class="mega-indicator">À Propos</span></a>
+    {%- endif -%}
       <ul class="sub-menu" style=" min-width: 94px;">
+        {%- if h.lang() == 'en' -%}
         <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">About CIOOS Atlantic</a></li>
         <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Meet Our Team</a></li>
-        <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Partners</a></li>
+        <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Our Partners</a></li>
         <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Essential Ocean Variables</a></li>
         <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Data Management</a></li>
+        {%- else -%}
+        <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">À Propos de CIOOS Atlantique</a></li>
+        <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Rencontrez Notre Équipe</a></li>
+        <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Nos Partenaires</a></li>
+        <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Variables de Base</a></li>
+        <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Gestion de Données</a></li>
+        {%- endif -%}
       </ul>
     </li>
+    {%- if h.lang() == 'en' -%}
     <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>DATA TOOLS</span></a></li>
     <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span class="mega-indicator">DATA CATALOGUE</span></a>
       <ul class="sub-menu" style=" min-width: 161px;">
@@ -59,6 +98,17 @@
     </li>
     <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">RESOURCES</span></a>
     </li>
+    {%- else -%}
+    <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>Outils de Données</span></a></li>
+    <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span class="mega-indicator">Catalogue de Données</span></a>
+      <ul class="sub-menu" style=" min-width: 161px;">
+        <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
+        <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
+      </ul>
+    </li>
+    <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">Ressources</span></a>
+    </li>
+    {%- endif -%}
   </ul>
   {% endblock %}
 {% endmacro %}
