--- a/ckanext/cioos_theme/templates/header_wp.html
+++ b/ckanext/cioos_theme/templates/header_wp.html
@@ -52,14 +52,7 @@
         <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}about/partners/">Partners</a></li>
       </ul>
     </li>
-    <li id="menu-item-1673" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}data-applications/"><span>APPLIED DATA</span></a>
-      <!-- <ul class="sub-menu" style=" min-width: 144px;">
-        <li id="menu-item-1743" class="menu-item "><a href="{{ g.site_home_url }}data-applications/baynes-sound/">Baynes Sound Ecosystem Monitoring</a></li>
-        <li id="menu-item-1940" class="menu-item "><a href="{{ g.site_home_url }}under-construction/">Marine Heatwaves</a></li>
-        <li id="menu-item-1942" class="menu-item "><a href="{{ g.site_home_url }}under-construction/">Ocean Climate</a></li>
-        <li id="menu-item-1941" class="menu-item "><a href="{{ g.site_home_url }}under-construction/">Strait of Georgia Currents</a></li>
-      </ul> -->
-    </li>
+    <li id="menu-item-1673" class="menu-item "><a href="{{ g.site_home_url }}data-applications/"><span>APPLIED DATA</span></a></li>
     <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>DATA TOOLS</span></a></li>
     <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>DATA CATALOGUE</span></a>
       <ul class="sub-menu" style=" min-width: 161px;">
