--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -6,8 +6,8 @@
       <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>HOME</span></a></li>
       <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span>ABOUT</span></a>
       {%- else -%}
-      <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>Accueil</span></a></li>
-      <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span>À Propos</span></a>
+      <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}fr/"><span>Accueil</span></a></li>
+      <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/"><span>À Propos</span></a>
       {%- endif -%}
         <ul class="sub-menu">
           {%- if h.lang() == 'en' -%}
@@ -17,11 +17,11 @@
           <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Essential Ocean Variables</a></li>
           <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Data Management</a></li>
           {%- else -%}
-          <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">À Propos de CIOOS Atlantique</a></li>
-          <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Rencontrez Notre Équipe</a></li>
-          <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Nos Partenaires</a></li>
-          <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Variables de Base</a></li>
-          <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Gestion de Données</a></li>
+          <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}fr/">À Propos de CIOOS Atlantique</a></li>
+          <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}fr/">Rencontrez Notre Équipe</a></li>
+          <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}fr/">Nos Partenaires</a></li>
+          <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}fr/">Variables de Base</a></li>
+          <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}fr/">Gestion de Données</a></li>
           {%- endif -%}
         </ul>
       </li>
@@ -36,11 +36,11 @@
       <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span>RESOURCES</span></a>
       </li>
       {%- else -%}
-      <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>Outils de Données</span></a></li>
-      <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Catalogue de Données</span></a>
+      <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}fr/"><span>Outils de Données</span></a></li>
+      <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}fr/"><span>Catalogue de Données</span></a>
         <ul class="sub-menu">
-          <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
-          <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
+          <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}fr/dataset">Jeux de données</a></li>
+          <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}fr/organization">Organisations</a></li>
         </ul>
       </li>
       <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span>Ressources</span></a>
@@ -69,8 +69,8 @@
     <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>HOME</span></a></li>
     <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span class="mega-indicator">ABOUT</span></a>
     {%- else -%}
-    <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>Accueil</span></a></li>
-    <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}about/"><span class="mega-indicator">À Propos</span></a>
+    <li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}fr/"><span>Accueil</span></a></li>
+    <li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/"><span class="mega-indicator">À Propos</span></a>
     {%- endif -%}
       <ul class="sub-menu" style=" min-width: 94px;">
         {%- if h.lang() == 'en' -%}
@@ -80,11 +80,11 @@
         <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Essential Ocean Variables</a></li>
         <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Data Management</a></li>
         {%- else -%}
-        <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}about/">À Propos de CIOOS Atlantique</a></li>
-        <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}meet-our-team/">Rencontrez Notre Équipe</a></li>
-        <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}our-partners/">Nos Partenaires</a></li>
-        <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}eovs/">Variables de Base</a></li>
-        <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}data-management-overview/">Gestion de Données</a></li>
+        <li id="menu-item-1870" class="menu-item "><a href="{{ g.site_home_url }}fr/">À Propos de CIOOS Atlantique</a></li>
+        <li id="menu-item-1871" class="menu-item "><a href="{{ g.site_home_url }}fr/">Rencontrez Notre Équipe</a></li>
+        <li id="menu-item-1872" class="menu-item "><a href="{{ g.site_home_url }}fr/">Nos Partenaires</a></li>
+        <li id="menu-item-1873" class="menu-item "><a href="{{ g.site_home_url }}fr/">Variables de Base</a></li>
+        <li id="menu-item-1934" class="menu-item "><a href="{{ g.site_home_url }}fr/">Gestion de Données</a></li>
         {%- endif -%}
       </ul>
     </li>
@@ -99,11 +99,11 @@
     <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">RESOURCES</span></a>
     </li>
     {%- else -%}
-    <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}data-tools/"><span>Outils de Données</span></a></li>
-    <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span class="mega-indicator">Catalogue de Données</span></a>
+    <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}fr/"><span>Outils de Données</span></a></li>
+    <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}fr/"><span class="mega-indicator">Catalogue de Données</span></a>
       <ul class="sub-menu" style=" min-width: 161px;">
-        <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
-        <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
+        <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}fr/dataset">Jeux de données</a></li>
+        <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}fr/organization">Organisations</a></li>
       </ul>
     </li>
     <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">Ressources</span></a>
