Removed caret for resources menu item.

--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -96,7 +96,7 @@
         <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organizations</a></li>
       </ul>
     </li>
-    <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">RESOURCES</span></a>
+    <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">RESOURCES</span></a>
     </li>
     {%- else -%}
     <li id="menu-item-1359" class="menu-item "><a href="{{ g.site_home_url }}fr/"><span>Outils de Données</span></a></li>
@@ -106,7 +106,7 @@
         <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}fr/organization">Organisations</a></li>
       </ul>
     </li>
-    <li id="menu-item-2002" class="menu-item  menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">Ressources</span></a>
+    <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">Ressources</span></a>
     </li>
     {%- endif -%}
   </ul>
