--- a/ckanext/cioos_theme/templates/scheming/package/read.html
+++ b/ckanext/cioos_theme/templates/scheming/package/read.html
@@ -12,7 +12,21 @@
 
   {% if ( h.scheming_field_by_name(schema.dataset_fields, 'notes') or h.scheming_field_by_name(schema.dataset_fields, 'notes_translated') ) and h.get_translated(pkg, 'notes') %}
     <div class="notes embedded-content">
-      {{ h.render_markdown(h.get_translated(pkg, 'notes')) }}
+      {{ h.render_markdown(h.get_translated(pkg, 'notes'))[:-4] }} {# remove trailing </p> #}
+
+      {% set notes_translation_method = h.cioos_load_json( h.get_pkg_dict_extra(c.pkg_dict, 'notes_translation_method') or c.pkg_dict.get('notes_translation_method') or '{}' )%}
+      {% set nmethod = notes_translation_method.get(h.lang()) %}
+      {% if nmethod %}
+        <span class="translation_icon_group" title="{{ nmethod }}">
+          <i class="fa fa-language translation_icon" aria-hidden="true"></i>
+          {% if nmethod == 'Automatic Translation' %}
+            <i class="fa fa-desktop translation_icon" aria-hidden="true"></i>
+          {% else %}
+            <i class="fa fa-user translation_icon" aria-hidden="true"></i>
+          {% endif%}
+        </span>
+      {% endif%}
+      </p>
     </div>
   {% endif %}
 
